# discord-expire-roles

./: .env.example  Makefile  README.md  main.py  pyproject.toml
discord_role_expire/: bot.py  checks.py  db.py  types.py
